feat(CU-86bygkpm3)added wallet_sessions table migration - create indexes.change for support new proto format of hdwallet-api and hdwallet controller.fixed bug with wrong SQL date range requests
