# internal/grpc/handler_wallet_session_get_info.go
@@ -98,6 +98,7 @@ func (h *GetWalletSessionHandler) Handle(ctx context.Context,
 			SessionIdentifier: &pbApi.WalletSessionIdentity{
 				SessionUUID: sessionItem.UUID,
 			},
+			SessionStatus:    pbApi.WalletSessionStatus(sessionItem.Status),
 			SessionStartedAt: uint64(sessionItem.CreatedAt.Unix()),
 			SessionExpiredAt: uint64(sessionItem.ExpiredAt.Unix()),
 		},
